# 5g-inspector

./: .gitignore  CLAUDE.md  README.md  alerting.py  bunfig.toml  congestion.py  create_dash.py  diagnostic_reports.py  diagnostic_reports_ui.js  ecosystem.config.cjs  fcc_complaint_report.py  index.html  network_quality.py  network_quality_config.json  package.json  ruff.toml  scheduler.py  server.py  service_terms.json  service_terms.py  signal_speed_correlation.py  update_index.py
.beads/: issues.jsonl
.claude/: settings.local.json
.prose/: coder-village.prose  research-with-agents.prose  state.json
backend/: CLAUDE.md  network_quality_config.json  pyproject.toml  scheduler_config.json
backend/src/tmobile_dashboard/: __init__.py  api.py  config.py  database.py  gateway.py  logging.py  main.py  metrics.py  middleware.py  models.py
backend/src/tmobile_dashboard/background/: __init__.py  scheduler.py
backend/src/tmobile_dashboard/db/: __init__.py  connection.py  repository.py
backend/src/tmobile_dashboard/services/: __init__.py  alerting.py  alerts.py  congestion.py  diagnostics.py  disruption.py  gateway.py  lifespan.py  loki.py  network_quality.py  ping_monitor.py  scheduler.py  service_terms.py  speedtest.py  speedtest_tools.py  support.py
backend/tests/: test_core.py
docs/: FCC_COMPLAINT_GUIDE.md  base-ui-evaluation.md  observability-gaps.md  rca-guide.md  simplification-plan.md
infra/: CLAUDE.md  Dockerfile.grafana-api  docker-compose.yml  supervisord-debian.conf  supervisord.conf
scripts/: README.md  kill-stack.ps1  kill-stack.sh  start-stack.ps1  (+5 more)
(+94 files in other folders)
